--- a/OefeningWP1/composer.json
+++ b/OefeningWP1/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^5.7",
+        "altorouter/altorouter": "1.1"
     }
 }
